--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,6 @@ Thumbs.db
 *.temp
 
 # lfs
-RUN_6_27\eda_files\eda_part2.ipynb
-RUN_6_27\eda_files\estonia_eda.ipynb
-RUN_6_27\eda_files\raw_series_preprocessed.csv
+RUN_6_27/eda_files/eda_part2.ipynb
+RUN_6_27/eda_files/estonia_eda.ipynb
+RUN_6_27/eda_files/raw_series_preprocessed.csv
