--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        ref: dev
+        fetch-depth: 0  # Needed for git pull
     
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -41,5 +43,6 @@ jobs:
           echo "No changes to commit"
         else
           git commit -m "Auto-update README summary [skip ci]"
+          git pull --rebase origin dev
           git push
         fi
