--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update README with AI Summary
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, dev ]
     paths:
       - '**/*.md'
       - '!README.md'  # Don't trigger on README.md changes to avoid loops
@@ -16,6 +16,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        ref: dev
+        fetch-depth: 0  # Needed for git pull
     
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -31,7 +33,7 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: python scripts/generate_summary.py
-    
+
     - name: Commit and push changes
       run: |
         git config --local user.email "action@github.com"
@@ -41,5 +43,6 @@ jobs:
           echo "No changes to commit"
         else
           git commit -m "Auto-update README summary [skip ci]"
+          git pull --rebase origin dev
           git push
         fi
